# Tradesocio-assignment

./: .gitignore  CMakeLists.txt  README.md
src/: MatchingEngine.cpp  MatchingEngine.h  OrderBook.cpp  OrderBook.h  PnLEngine.cpp  PnLEngine.h  Types.h  main.cpp
tests/: test_matching.cpp  test_order_book.cpp  test_pnl.cpp
